alignment issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,10 @@ body {
   overflow-x: hidden;
   width: 100%;
 }
+body.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
 
 /* Remove list styles */
 ul,
@@ -192,7 +196,7 @@ p {
   padding: 2rem;
   padding-left: 4rem;
   border-radius: 0.5rem;
-  z-index: 100;
+  z-index: 10000;
   transition: 0.6s;
   display: flex;
   align-items: center;
@@ -514,7 +518,7 @@ p {
 
 .col-3 > div {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 1.5rem;
 }
 
@@ -566,7 +570,28 @@ p {
 .modal .right {
   background-color: var(--clr-main);
   padding-block: 2rem;
+  min-height: 100%;
 }
+
+@media screen and (max-width: 767px) {
+  .service-modal {
+    top: 50%;
+    width: 100%;
+    position: fixed;
+  }
+  .modal .left {
+    height: 100vh;
+  }
+  .service-modal > div {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .modal .left {
+    width: 100%;
+  }
+}
+
 .modal .right {
   background-color: white;
   padding: 4rem;
@@ -588,6 +613,7 @@ p {
   position: relative;
   padding: 1.5rem 2rem;
 }
+
 .modal .left > div::after {
   position: absolute;
   content: "";
@@ -658,7 +684,7 @@ img {
   width: 100%;
   padding: 8rem 2rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 4rem;
   border-top: 1px solid gray;
 }
@@ -667,6 +693,7 @@ img {
   font-weight: 600;
   color: var(--clr-main);
   align-self: flex-start;
+  line-height: 1.1;
 }
 .service-item h3 {
   font-size: 2.5rem;
@@ -791,16 +818,6 @@ img {
   height: 100px;
 }
 
-@media screen and (max-width: 425px) {
-  .investments h2 {
-    text-align: center;
-  }
-
-  .investment-card img {
-    max-width: 50px;
-    height: 50px;
-  }
-}
 .investment-card:hover img {
   filter: grayscale(0);
 }
@@ -832,10 +849,26 @@ img {
     font-size: 2.5rem;
   }
   .investments a {
-    padding: 3rem;
     font-size: 2.5rem;
     text-align: left;
     justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .investments h2 {
+    text-align: center;
+  }
+
+  .investment-card a {
+    font-size: 1.9rem;
+    text-align: left;
+    justify-content: flex-start;
+  }
+
+  .investment-card img {
+    max-width: 50px;
+    height: 50px;
   }
 }
 
@@ -1111,6 +1144,34 @@ img {
 .contact-us {
   padding: 10rem 5rem;
 }
+
+.popup {
+  position: fixed;
+  top: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
+  height: 150px;
+  border-radius: 1rem;
+  color: white;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  backdrop-filter: blur(5px);
+  transition: all 0.3s;
+  text-align: center;
+}
+
+.success {
+  background: lightgreen;
+}
+
+.error {
+  background: lightcoral;
+}
+
 .contact-us .cards {
   max-width: 60%;
   display: grid;
